# native-trace

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  compose.yaml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  wiring_manifest.yml
.claude/: settings.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
adr/: 001-gop-based-pronunciation-error-detection.md  002-espeak-ng-ipa-unification-g2p-in-python.md  003-defer-whisper-asr-until-accuracy-slice.md  004-scoring-policy-in-haskell-worker-structured-diff.md  005-python-analysis-service-onion-architecture.md  006-parselmouth-gpl3-license-boundary.md  007-training-context-bounded-context.md  008-training-progress-timeseries-data-model.md  009-hvpt-stimulus-hybrid-natural-tts.md  010-diagnostic-weakness-profile-focus-derivation.md  011-spacing-scheduler-fixed-interval-mastery-gate.md  012-golden-speaker-voice-conversion-rvc.md  013-shadowing-lag-measurement.md  014-analysis-pipeline-robustness-low-quality-and-webm.md  015-low-quality-loudness-over-speech-active-frames.md  016-recording-volume-meter-peak-hold-smoothing.md  017-epenthesis-feedback-contract-and-scoring.md  018-acoustic-phonetic-diagnosis-formant-spectral-vot.md  019-acoustic-to-articulatory-inversion-enrichment-service.md  020-deterministic-how-catalog-depth-articulatory-diagrams.md  021-llm-coaching-narrative-switchable-claude-ollama-rule-fallback.md  022-closed-remediation-improvement-measurement-loop.md  023-llm-narrative-timeout-budget-and-fallback-observability.md  024-acoustic-diagnosis-visual-layer-and-scalar-contract.md  025-prosody-visualization-render-contract.md  026-finding-presentation-confidence-register-and-projection.md  027-focus-sound-training-handoff-and-cross-screen-priority.md  028-history-review-surface-contract.md  029-material-library-presentation-contract.md  030-workspace-rail-canonicalization-and-prototype-tooling-scope.md  031-full-cycle-e2e-test-harness-and-deterministic-fixtures.md  032-snr-aware-low-quality-gate.md
applications/aai/: Dockerfile  pyproject.toml
applications/aai/src/aai/: app.py  main.py
applications/aai/src/aai/domain/: articulatory_estimate.py
applications/aai/src/aai/infrastructure/: articulatory_inversion.py
applications/aai/src/aai/interface/: http_handler.py  schema.py
applications/aai/src/aai/usecase/: invert_articulation.py
applications/aai/src/aai/usecase/port/: articulatory_inversion.py
applications/aai/test/: test_contract.py  test_graceful_degrade.py  test_pure_helpers.py
applications/backend/: .dockerignore  .hlint.yaml  Dockerfile  fourmolu.yaml  native-trace-worker.cabal
applications/backend/app/: Main.hs
applications/backend/src/NativeTrace/Worker/: AaiClient.hs  AnalyzerClient.hs  Api.hs  Application.hs  Assessment.hs  Catalog.hs  GoldenSpeakerClient.hs  HttpSupport.hs  Scoring.hs  Types.hs
applications/backend/test/NativeTrace/Worker/: ApplicationSpec.hs  GoldenSpeakerSpec.hs  ScoringSpec.hs  ShadowingLagSpec.hs
applications/golden-speaker/: Dockerfile  pyproject.toml
applications/golden-speaker/src/golden_speaker/: app.py  main.py
applications/golden-speaker/src/golden_speaker/domain/: conversion_result.py
applications/golden-speaker/src/golden_speaker/infrastructure/: quality_gate.py  rvc_engine.py
applications/golden-speaker/src/golden_speaker/interface/: http_handler.py  schema.py
applications/golden-speaker/src/golden_speaker/usecase/: convert_voice.py
applications/golden-speaker/src/golden_speaker/usecase/port/: quality_gate.py  rvc_engine.py
applications/golden-speaker/test/: test_convert_voice_usecase.py  test_quality_gate.py  test_schema.py
applications/python-analyzer/: Dockerfile  download_alignment.py  pyproject.toml
applications/python-analyzer/src/python_analyzer/: __init__.py  app.py  main.py
applications/python-analyzer/src/python_analyzer/domain/: __init__.py  audio.py  measurement.py  phoneme.py  shadowing_lag.py
applications/python-analyzer/src/python_analyzer/infrastructure/: __init__.py  audio_energy.py  dtw_lag.py  espeak_g2p.py  kokoro_tts.py  parselmouth_formant.py  parselmouth_prosody.py  prosody_analyzer.py  rhythm.py  speech_rate.py  syllable.py  wav2vec2_aligner.py  weak_form.py
applications/python-analyzer/src/python_analyzer/infrastructure/stimulus/: __init__.py  asset_store.py  audio_carver.py  carve_runner.py  context_classifier.py  domain.py  kokoro_supplement.py  libritts_carver.py  speaker_metadata.py  textgrid_parser.py
applications/python-analyzer/src/python_analyzer/interface/: __init__.py  analysis_response_mapper.py  http_handler.py  schema.py
applications/python-analyzer/src/python_analyzer/usecase/: __init__.py  analyze_pronunciation.py  compute_shadowing_lag.py  ports.py
applications/python-analyzer/stimuli-assets/: attribution-manifest.json
applications/python-analyzer/test/domain/: test_phoneme.py  test_phoneme_acoustic_measurement.py
applications/python-analyzer/test/fixtures/corpus/: manifest.json
applications/python-analyzer/test/infrastructure/: test_audio_energy.py  test_energy_vad.py  test_kokoro_tts.py  test_nbest.py  test_npvi.py  test_parselmouth_formant.py  test_reference_f0_contour.py  test_stress.py  test_syllable.py  test_wada_snr.py  test_wav2vec2_aligner_decode.py
applications/python-analyzer/test/infrastructure/stimulus/: __init__.py  test_asset_store.py  test_audio_carver.py  test_cc_by_nc_exclusion.py  test_speaker_diversity.py  test_textgrid_parser.py
applications/python-analyzer/test/interface/: test_analysis_metadata_schema.py  test_analysis_response_mapper.py  test_http_handler.py  test_shadowing_lag_schema.py  test_stimuli_endpoint.py
applications/python-analyzer/test/selfeval/: __init__.py  compute_fingerprint.py  drift_check.py  run_selfeval.py  test_drift_check.py  test_transforms.py  transforms.py
applications/python-analyzer/test/usecase/: test_compute_shadowing_lag.py  test_word_position.py
ci/: allowlist.yml
incidents/: 2026-06-12-v2-pronunciation-feedback.md  2026-06-13-v2-residuals-worker-crash.md  incident.json  (+5 more)
scripts/: evidence-stamp.sh  (+26 more)
(+479 files in other folders)
