[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aai"
version = "1.0.0"
description = "NativeTrace AAI Service — 音響→調音逆推定 HTTP API（ADR-019）"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "python-multipart>=0.0.9",
    # articulatory/articulatory (Apache-2.0) — lazy import（torch/checkpoint 不在で graceful degrade）
    # PyPI 名は "articulatory"。PyPI に存在しない場合は GitHub から直接インストールする:
    #   pip install "git+https://github.com/articulatory/articulatory.git"
    # Dockerfile でインストール先を確定する（requirements に記録しておく）。
    # torch CPU wheel（BSD-3）— CUDA 肥大回避（Dockerfile で --index-url 指定）
    "torch>=2.2.2",
    "torchaudio>=2.2.2",
    # F0 (voicing) 計算に librosa (ISC) を使用する。
    # parselmouth (GPL) は使用しない（ADR-006/012 封じ込め準拠）。
    # aai service は Apache/MIT/BSD/ISC のみに依存する。
    "librosa>=0.10.0",
    "numpy>=1.24.0",
    "soundfile>=0.12.0",
    # HF Hub から EMA checkpoint を DL する（M-GRV-10 イメージ非焼込）
    "huggingface_hub>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.7.0",
    "pyright>=1.1.390",
]

[tool.hatch.build.targets.wheel]
packages = ["src/aai"]

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "ANN", # flake8-annotations
]
ignore = [
    "ANN401",  # Dynamically typed expressions (Any) are disallowed
]

[tool.ruff.lint.per-file-ignores]
"test/**" = ["ANN"]
# schema.py は API 契約として camelCase フィールドを使用するため N815 を抑制する
"**/interface/schema.py" = ["N815"]
# app.py の FastAPI File/Form パターンは意図的なデフォルト引数の関数呼び出しのため B008 を抑制する
"**/app.py" = ["B008"]
"**/interface/http_handler.py" = ["B008"]

[tool.pyright]
pythonVersion = "3.10"
include = ["src"]
exclude = ["test"]
strict = ["src/aai/domain", "src/aai/usecase"]
