[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "golden-speaker"
version = "1.0.0"
description = "NativeTrace Golden Speaker — 汎用 VCTK ネイティブ声への音色変換 HTTP API（ADR-012）"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "python-multipart>=0.0.9",
    # RVC 音色変換（MIT）— CPU 推論パス（M-GRV-2 / REQ-NF-102）
    "rvc-python>=0.1.8",
    # torch CPU wheel（BSD-3）— CUDA 肥大回避（Dockerfile で --index-url 指定）
    "torch>=2.4.0",
    "torchaudio>=2.4.0",
    # F0 連続性品質ゲート（M-GRV-3）— license-clean (ISC + BSD-3)
    # parselmouth (GPL-3.0) は使用しない（ADR-012 license-clean 要件）
    "librosa>=0.10.0",
    "numpy>=1.24.0",
    "soundfile>=0.12.0",
    # HF Hub から RVC モデル重みを DL する（M-GRV-10 イメージ非焼込）
    "huggingface_hub>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.7.0",
    "pyright>=1.1.390",
]

[tool.hatch.build.targets.wheel]
packages = ["src/golden_speaker"]

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "ANN", # flake8-annotations
]
ignore = [
    "ANN401",  # Dynamically typed expressions (Any) are disallowed
]

[tool.ruff.lint.per-file-ignores]
"test/**" = ["ANN"]
# schema.py は API 契約として camelCase フィールドを使用するため N815 を抑制する
"**/interface/schema.py" = ["N815"]
# app.py の FastAPI File/Form パターンは意図的なデフォルト引数の関数呼び出しのため B008 を抑制する
"**/app.py" = ["B008"]
"**/interface/http_handler.py" = ["B008"]

[tool.pyright]
pythonVersion = "3.11"
include = ["src"]
exclude = ["test"]
strict = ["src/golden_speaker/domain", "src/golden_speaker/usecase"]
