[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "python-analyzer"
version = "1.0.0"
description = "NativeTrace 発音解析 HTTP API サービス"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "transformers>=4.45.0",
    "torch>=2.4.0",
    "torchaudio>=2.4.0",
    "phonemizer>=3.3.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    "soundfile>=0.12.0",
    "numpy>=1.24.0",
    # C1-b F0 輪郭計測（GPL-3.0; python-analyzer 内部利用に限定）
    "praat-parselmouth>=0.4.3",
    # C2 TTS: Kokoro-82M General American（M-124）
    "kokoro>=0.9.4",
    # kokoro 依存
    "scipy>=1.11.0",
    # ADR-009: alignment archive download from HuggingFace (carve pipeline)
    "huggingface_hub>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
    "pyright>=1.1.390",
]

[tool.hatch.build.targets.wheel]
packages = ["src/python_analyzer"]

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "ANN", # flake8-annotations
]
ignore = [
    "ANN401",  # Dynamically typed expressions (Any) are disallowed
]

[tool.ruff.lint.per-file-ignores]
"test/**" = ["ANN"]
# schema.py は API 契約として camelCase フィールドを使用するため N815 を抑制する
"**/interface/schema.py" = ["N815"]
# app.py の FastAPI Depends/File/Form パターンは意図的なデフォルト引数の関数呼び出しのため B008 を抑制する
"**/app.py" = ["B008"]

[tool.pyright]
pythonVersion = "3.11"
include = ["src"]
exclude = ["test"]
strict = ["src/python_analyzer/domain", "src/python_analyzer/usecase"]
